{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 6,
  "lineage": "2f40b8bd-79b4-fe59-7116-8ba57fd3e362",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743729397510:security-group/sg-0d782e853764138d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d782e853764138d3",
            "ingress": [],
            "name": "lambda_sg",
            "name_prefix": "",
            "owner_id": "743729397510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b585ddd609a265f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743729397510:security-group/sg-018f5f0c308b64d2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018f5f0c308b64d2b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d782e853764138d3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "743729397510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b585ddd609a265f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg"
          ]
        }
      ]
    }
  ]
}